<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NasaImageOfDay</string>
    <string name="nasa_image_title"></string>
    <string name="nasa_image_date"></string>
    <string name="nasa_image_item"></string>
    <string name="nasa_image_desc"></string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="set_wallpaper">Set as a WallPaper</string>
</resources>
